--- a/assignments/assignment_2.ipynb
+++ b/assignments/assignment_2.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,16 +114,72 @@
     "        m = 0 if self.problem_data.get('G') is None else self.problem_data.get('G').shape[0]\n",
     "\n",
     "        # Update the coefficients of the objective function\n",
-    "        # <add code here>\n",
+    "        p_original = self.problem_data.get('P')\n",
+    "        zero_matrix_top_right = np.zeros((n, n))\n",
+    "        zero_matrix_bottom = np.zeros((n, 2 * n))\n",
+    "        p_top = np.hstack((p_original, zero_matrix_top_right))\n",
+    "        P = np.vstack((p_top, zero_matrix_bottom))\n",
+    "\n",
+    "        q_original = self.problem_data.get('q')\n",
+    "        zero_vector = np.zeros(n) \n",
+    "        q = np.concatenate([q_original, zero_vector])  \n",
     "\n",
     "        # Update the equality constraints\n",
-    "        # <add code here>\n",
+    "        A_original = self.problem_data.get('A')\n",
+    "        b_original = self.problem_data.get('b')  \n",
+    "\n",
+    "        if A_original is not None:\n",
+    "            A = np.hstack((A_original, np.zeros((A_original.shape[0], n))))\n",
     "\n",
     "        # Update the inequality constraints\n",
-    "        # <add code here>\n",
+    "        G_original = self.problem_data.get('G')\n",
+    "        h_original = self.problem_data.get('h') \n",
+    "\n",
+    "        # Number of turnover variables (n)\n",
+    "        n = len(x_init)\n",
+    "\n",
+    "        num_existing_ineq = 0 if G_original is None else G_original.shape[0]\n",
+    "\n",
+    "        # Create new G and h matrices to incorporate turnover constraints\n",
+    "        new_n = 2 * n  # Turnover variables for each asset\n",
+    "        G = np.zeros((num_existing_ineq + 2 * n + 1, new_n))\n",
+    "        h = np.zeros(num_existing_ineq + 2 * n + 1)\n",
+    "        \n",
+    "        if G_original is not None:\n",
+    "            G[:num_existing_ineq, :n] = G_original\n",
+    "            h[:num_existing_ineq] = h_original\n",
+    "\n",
+    "        # Step 1: Update the G matrix by adding new rows for turnover constraints\n",
+    "        if G_original is not None:\n",
+    "            G[:num_existing_ineq, :n] = G_original\n",
+    "            h[:num_existing_ineq] = h_original\n",
+    "        \n",
+    "        G[num_existing_ineq:num_existing_ineq + n, :n] = np.eye(n)\n",
+    "        G[num_existing_ineq:num_existing_ineq + n, n:] = -np.eye(n)\n",
+    "        h[num_existing_ineq:num_existing_ineq + n] = x_init\n",
+    "\n",
+    "        # -(x - x_init) <= aux\n",
+    "        G[num_existing_ineq + n:num_existing_ineq + 2 * n, :n] = -np.eye(n)\n",
+    "        G[num_existing_ineq + n:num_existing_ineq + 2 * n, n:] = -np.eye(n)\n",
+    "        h[num_existing_ineq + n:num_existing_ineq + 2 * n] = -x_init\n",
+    "\n",
+    "        # Turnover budget constraint: sum(auxiliary variables) <= to_budget\n",
+    "        G[-1, n:] = 1\n",
+    "        h[-1] = to_budget\n",
     "\n",
     "        # Update lower and upper bounds\n",
     "        # <add code here>\n",
+    "        lb_original = self.problem_data.get('lb')\n",
+    "        ub_original = self.problem_data.get('ub')\n",
+    "\n",
+    "        n = len(x_init)\n",
+    "\n",
+    "        # Step 1: Extend the lower bounds\n",
+    "        lb = np.concatenate([lb_original, np.zeros(n)])  # Add zero lower bounds for turnover variables\n",
+    "\n",
+    "        # Step 2: Extend the upper bounds\n",
+    "        ub = np.concatenate([ub_original, np.full(n, float('inf'))])  # Set infinity upper bounds for turnover variables\n",
+    "\n",
     "\n",
     "        # Override the original matrices (notice: b does not change)\n",
     "        self.update_problem_data({\n",
@@ -155,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -266,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
